compose_box: Fix alignment of eye/preview icon.

--- a/static/styles/compose.scss
+++ b/static/styles/compose.scss
@@ -476,6 +476,7 @@ a#undo_markdown_preview {
     position: relative;
     font-size: 16px;
     color: hsl(0, 0%, 47%);
+    margin-top: -1.5px;
 }
 
 #markdown_preview_spinner {
